chore: update ci/cd

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,10 +4,8 @@
 name: CI (Node.js)
 
 on:
-  push:
-    branches: "master"
   pull_request:
-    branches: "master"
+    branches: "*"
 
 jobs:
   build:
