--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo -p 7890",
+    "dev": "next dev -p 7890",
     "build": "next build",
     "start": "next start",
     "export": "next export",
